feat(mainskill): refactor mainskill and add Honchkrow
